unpackaged/main/default/objects/Case/fields/Create_Child_Case_for_Policy_Services__c.field-meta.xml
<CustomField>
    <fullName>Create_Child_Case_for_Policy_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Child Case for Policy Services</label>
    <type>Checkbox</type>
</CustomField>