unpackaged/main/default/objects/Case/fields/CvabClaim__c.field-meta.xml
<CustomField>
    <fullName>CvabClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Absence Claim</label>
    <referenceTo>cvab__Claim__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>CvabClaim</relationshipName>
    <type>Lookup</type>
</CustomField>