unpackaged/main/default/objects/Case/fields/CveClaim__c.field-meta.xml
<CustomField>
    <fullName>CveClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Claim</label>
    <referenceTo>cve__Claim__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>CveClaim</relationshipName>
    <type>Lookup</type>
</CustomField>