unpackaged/main/default/objects/Case/fields/Date_All_Information_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_All_Information_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date All Information Received</label>
    <type>Date</type>
</CustomField>