unpackaged/main/default/objects/Case/fields/Date_to_QA__c.field-meta.xml
<CustomField>
    <fullName>Date_to_QA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date to QA</label>
    <type>Date</type>
</CustomField>