unpackaged/main/default/objects/Case/fields/Days_on_External_Hold__c.field-meta.xml
<CustomField>
    <fullName>Days_on_External_Hold__c</fullName>
    <formula>IF( External_Hold_End_Date__c  &gt; External_Hold_Start_Date__c , External_Hold_End_Date__c  - External_Hold_Start_Date__c,IF(External_Hold_Start_Date__c &gt; CreatedDate, NOW() - 
External_Hold_Start_Date__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days on External Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>