unpackaged/main/default/objects/Case/fields/Days_On_External_hold_Old__c.field-meta.xml
<CustomField>
    <fullName>Days_On_External_hold_Old__c</fullName>
    <description>Days between info requested and info received on Policy Implementation</description>
    <inlineHelpText>Days between info requested and info received on Policy Implementation</inlineHelpText>
    <label>Days On External Hold Old</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>