unpackaged/main/default/objects/Case/fields/Days_on_External_Internal_Hold__c.field-meta.xml
<CustomField>
    <fullName>Days_on_External_Internal_Hold__c</fullName>
    <description>Reflect days on external hold + days on internal hold.  Used for calculation of LM Case Age</description>
    <formula>Days_on_External_Hold__c  +  Days_On_Internal_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days on External Internal Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>