unpackaged/main/default/objects/Case/fields/Days_On_Internal_Hold__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Internal_Hold__c</fullName>
    <formula>IF(Internal_Hold_End_Date__c &gt; Internal_Hold_Start_Date__c ,Internal_Hold_End_Date__c - Internal_Hold_Start_Date__c,IF(Internal_Hold_Start_Date__c &gt; CreatedDate, Now () - 
Internal_Hold_Start_Date__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days On Internal Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>