unpackaged/main/default/objects/Case/fields/Days_on_Internal_Hold_Old__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Internal_Hold_Old__c</fullName>
    <description>number of days on Internal Hold</description>
    <inlineHelpText>Number of Days on Internal Hold</inlineHelpText>
    <label>Days on Internal Hold Old</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>