unpackaged/main/default/objects/Case/fields/Days_Sent_Next_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Days_Sent_Next_Reminder_Email__c</fullName>
    <description>Captures number of days sent next reminder email minus today</description>
    <formula>TODAY()- Next_Reminder_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Sent Next Reminder Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>