unpackaged/main/default/objects/Case/fields/Days_to_Assign_Case__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Assign_Case__c</fullName>
    <formula>IF(Case_Assigned_Date__c &gt; CreatedDate, Case_Assigned_Date__c  -  CreatedDate ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Assign Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>