unpackaged/main/default/objects/Case/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <description>Captures department making request and/or submitted case</description>
    <inlineHelpText>Captures department making request and/or submitted case</inlineHelpText>
    <label>Department Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Planning</fullName>
            </value>
            <value>
                <fullName>Business Systems</fullName>
            </value>
            <value>
                <fullName>Central Records</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Membership &amp; Billing</fullName>
            </value>
            <value>
                <fullName>Organizational Development</fullName>
            </value>
            <value>
                <fullName>PCCR (Previously SBMA)</fullName>
            </value>
            <value>
                <fullName>Policy Services</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>