unpackaged/main/default/objects/Case/fields/Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Department_Type__c</fullName>
    <description>This field is used in report of Case Information</description>
    <formula>IF( NOT(ISBLANK(TEXT(Type))), 
 RecordType.Name  + &#39;:&#39; + Text(Type),
 RecordType.Name 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department:Type</label>
    <type>Text</type>
</CustomField>