unpackaged/main/default/objects/Case/fields/Description_of_Problem__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Problem__c</fullName>
    <description>Description of issue you are solving</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Describe the problem or defect you are solving</inlineHelpText>
    <label>Description of Problem</label>
    <length>900</length>
    <type>LongTextArea</type>
</CustomField>