unpackaged/main/default/objects/Case/fields/Difference_this_Would_Make__c.field-meta.xml
<CustomField>
    <fullName>Difference_this_Would_Make__c</fullName>
    <description>What difference does this make</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>In what way would fixing the problem make a meaningful difference, (eg Make your coworker&#39; s work life better)</inlineHelpText>
    <label>Difference this Would Make</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>