unpackaged/main/default/objects/Case/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Issue Resolved</fullName>
            </value>
            <value>
                <fullName>Issue Not Resolved</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
            <value>
                <fullName>Re-Routed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>