unpackaged/main/default/objects/Case/fields/EDI_Checklist_Count__c.field-meta.xml
<CustomField>
    <fullName>EDI_Checklist_Count__c</fullName>
    <label>EDI Checklist Count</label>
    <summaryForeignKey>EDI_Checklist__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>