unpackaged/main/default/objects/Case/fields/EDI_Pending_Approval_Count__c.field-meta.xml
<CustomField>
    <fullName>EDI_Pending_Approval_Count__c</fullName>
    <description>Totals number in Pending approval Status</description>
    <label>EDI Pending Approval Count</label>
    <summaryFilterItems>
        <field>EDI_Checklist__c.Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Approval</value>
    </summaryFilterItems>
    <summaryForeignKey>EDI_Checklist__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>