unpackaged/main/default/objects/Case/fields/EDIVendor__c.field-meta.xml
<CustomField>
    <fullName>EDIVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up Account Type of  EDI Vendor</description>
    <inlineHelpText>Look up EDI Vendor when Contact is not an EDI Vendor contact</inlineHelpText>
    <label>EDIVendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>EDI Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Account)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>