unpackaged/main/default/objects/Case/fields/Effective_Less_Than_Open__c.field-meta.xml
<CustomField>
    <fullName>Effective_Less_Than_Open__c</fullName>
    <formula>AND(NOT(ISNULL( Effective_Date__c )),DATEVALUE(CreatedDate) &gt; Effective_Date__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Less Than Open</label>
    <type>Checkbox</type>
</CustomField>