unpackaged/main/default/objects/Case/fields/Employee_Statement__c.field-meta.xml
<CustomField>
    <fullName>Employee_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>capture is claim intake required document has been received</description>
    <inlineHelpText>capture is claim intake required document has been received</inlineHelpText>
    <label>Employee Statement</label>
    <type>Checkbox</type>
</CustomField>