unpackaged/main/default/objects/Case/fields/Employee_Statement_Received__c.field-meta.xml
<CustomField>
    <fullName>Employee_Statement_Received__c</fullName>
    <description>Captures date employee statement was received</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures date employee statement was received</inlineHelpText>
    <label>Employee Statement Received</label>
    <type>Date</type>
</CustomField>