unpackaged/main/default/objects/Case/fields/Employer_Statement_Received__c.field-meta.xml
<CustomField>
    <fullName>Employer_Statement_Received__c</fullName>
    <description>Captures date employer statement was received</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures date employer statement was received</inlineHelpText>
    <label>Employer Statement Received</label>
    <type>Date</type>
</CustomField>