unpackaged/main/default/objects/Case/fields/Enrollment_Commission_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Commission_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Commission Case Created</label>
    <type>Checkbox</type>
</CustomField>