unpackaged/main/default/objects/Case/fields/Enrollment_ETA__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_ETA__c</fullName>
    <description>We are often on long periods of external holds pending enrollment, This would be an cleaner way to check</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment ETA</label>
    <type>Date</type>
</CustomField>