unpackaged/main/default/objects/Case/fields/Enrollment_Hold__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Hold</label>
    <type>Checkbox</type>
</CustomField>