unpackaged/main/default/objects/Case/fields/Enrollment_Implementation_Count__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Implementation_Count__c</fullName>
    <label>Enrollment Implementation Count</label>
    <summaryForeignKey>Enrollment_Implementation__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>