unpackaged/main/default/objects/Case/fields/Enrollment_Implementation_ID__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Implementation_ID__c</fullName>
    <description>This is the EIO ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Implementation ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>