unpackaged/main/default/objects/Case/fields/Enrollment_Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Implementation_Status__c</fullName>
    <description>Used for Enrollment Service Cases shows Status</description>
    <label>Enrollment Implementation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Information from Sales/Group</fullName>
            </value>
            <value>
                <fullName>Case Configuration</fullName>
            </value>
            <value>
                <fullName>Case Built waiting on Data Upload</fullName>
            </value>
            <value>
                <fullName>Internal Testing</fullName>
            </value>
            <value>
                <fullName>External Testing</fullName>
            </value>
            <value>
                <fullName>Sent for Download</fullName>
            </value>
            <value>
                <fullName>Enrolling</fullName>
            </value>
            <value>
                <fullName>Post Enrollment</fullName>
            </value>
            <value>
                <fullName>Ready to Close</fullName>
            </value>
            <value>
                <fullName>Perpetual Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>