unpackaged/main/default/objects/Case/fields/Enrollment_M_B_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_M_B_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment M&amp;B Case Created</label>
    <type>Checkbox</type>
</CustomField>