unpackaged/main/default/objects/Case/fields/EnrollmentImplementatonLU__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentImplementatonLU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Implementation</label>
    <referenceTo>Enrollment_Implementation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>