unpackaged/main/default/objects/Case/fields/Escalated_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Checkbox__c</fullName>
    <description>This field holds Escalated checkbox and used in validation</description>
    <formula>Manually_Escalated__c = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalated Checkbox</label>
    <type>Checkbox</type>
</CustomField>