unpackaged/main/default/objects/Case/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <description>This field contains the Reason why the Case is escalated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Entering an escalation reason here will automatically escalate the case upon saving.</inlineHelpText>
    <label>Escalation Reason</label>
    <type>TextArea</type>
</CustomField>