unpackaged/main/default/objects/Case/fields/Exit_before_8_AM__c.field-meta.xml
<CustomField>
    <fullName>Exit_before_8_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit before 8 AM</label>
    <type>Checkbox</type>
</CustomField>