unpackaged/main/default/objects/Case/fields/Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Date__c</fullName>
    <description>The date when EDI expects process to be completed or go live</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date we expect to be completed and group is live</inlineHelpText>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>