unpackaged/main/default/objects/Case/fields/Expected_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>Expected_CompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Completion Date</label>
    <type>Date</type>
</CustomField>