unpackaged/main/default/objects/Case/fields/External_Hold_End_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Hold_End_Date__c</fullName>
    <description>Date when hold was removed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when first hold was removed</inlineHelpText>
    <label>External Hold End Date</label>
    <type>DateTime</type>
</CustomField>