unpackaged/main/default/objects/Case/fields/External_Hold_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Hold_Start_Date__c</fullName>
    <description>First date case was put on External Hold</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External Hold Start Date</label>
    <type>DateTime</type>
</CustomField>