unpackaged/main/default/objects/Case/fields/File_Testing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Testing_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Testing End Date</label>
    <type>Date</type>
</CustomField>