unpackaged/main/default/objects/Case/fields/Flag_for_Case_Review__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_Case_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Policy Services to indicate when a case is done incorrectly or made need review.</description>
    <label>Flag for Case Review</label>
    <type>Checkbox</type>
</CustomField>