unpackaged/main/default/objects/Case/fields/Frequency_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Issue__c</fullName>
    <description>How often does issue occur</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How often does issue occur</inlineHelpText>
    <label>Frequency of Issue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>