unpackaged/main/default/objects/Case/fields/Functionality_Notes__c.field-meta.xml
<CustomField>
    <fullName>Functionality_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Functionality Notes</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>