unpackaged/main/default/objects/Case/fields/Further_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Further_Explanation__c</fullName>
    <description>Additional explanation of how it is technology-dependent</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional explanation of how it is technology-dependent</inlineHelpText>
    <label>Further Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>