unpackaged/main/default/objects/Case/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <description>EDI Case, the date EDI went live with Group</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>