unpackaged/main/default/objects/Case/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures Group Name</description>
    <inlineHelpText>Captures Group Name</inlineHelpText>
    <label>Group Name</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>