unpackaged/main/default/objects/Case/fields/Group_NBR__c.field-meta.xml
<CustomField>
    <fullName>Group_NBR__c</fullName>
    <formula>Group_Name__r.Group_Nbr__c</formula>
    <label>Group NBR</label>
    <type>Text</type>
</CustomField>