unpackaged/main/default/objects/Case/fields/Group_Next_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Next_Generation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Next Generation Date</label>
    <type>Date</type>
</CustomField>