unpackaged/main/default/objects/Case/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <description>Captures group number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures group number</inlineHelpText>
    <label>Group Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>