unpackaged/main/default/objects/Case/fields/Guide_Book_Setup_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Guide_Book_Setup_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guide Book / Setup End Date</label>
    <type>Date</type>
</CustomField>