unpackaged/main/default/objects/Case/fields/Guide_Book_Setup_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Guide_Book_Setup_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guide Book / Setup Start Date</label>
    <type>Date</type>
</CustomField>