unpackaged/main/default/objects/Case/fields/Hold_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reasons__c</fullName>
    <description>Internal Hold Reasons</description>
    <inlineHelpText>Enter Areas you are waiting on an Internal Response</inlineHelpText>
    <label>Hold Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Systems</fullName>
            </value>
            <value>
                <fullName>Census File</fullName>
            </value>
            <value>
                <fullName>Census Info</fullName>
            </value>
            <value>
                <fullName>CDF/AQF</fullName>
            </value>
            <value>
                <fullName>Enrollment Testing</fullName>
            </value>
            <value>
                <fullName>EOI’s</fullName>
            </value>
            <value>
                <fullName>FICA Match Agreement</fullName>
            </value>
            <value>
                <fullName>Legal Dept.</fullName>
            </value>
            <value>
                <fullName>Master Application</fullName>
            </value>
            <value>
                <fullName>PCCR – Commissions</fullName>
            </value>
            <value>
                <fullName>PCCR – Licensing</fullName>
            </value>
            <value>
                <fullName>Prior Carrier Certs</fullName>
            </value>
            <value>
                <fullName>Prior Carrier Invoice</fullName>
            </value>
            <value>
                <fullName>Product Dept.</fullName>
            </value>
            <value>
                <fullName>Quoting</fullName>
            </value>
            <value>
                <fullName>Roster Review</fullName>
            </value>
            <value>
                <fullName>Scrub Answers</fullName>
            </value>
            <value>
                <fullName>UW Approval</fullName>
            </value>
            <value>
                <fullName>W2 Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>