unpackaged/main/default/objects/Case/fields/How_to_collect_data__c.field-meta.xml
<CustomField>
    <fullName>How_to_collect_data__c</fullName>
    <description>How to collect the data</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If data is not available, how do we collect the data</inlineHelpText>
    <label>How to Collect Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>