unpackaged/main/default/objects/Case/fields/Impact_of_the_Problem__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_the_Problem__c</fullName>
    <description>Impact of the problem to LSV and/or the customer</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Impact of the problem to LSV and/or the customer</inlineHelpText>
    <label>Impact of the Problem</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>