unpackaged/main/default/objects/Case/fields/Implement_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Implement_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialist</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Implement</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>