unpackaged/main/default/objects/Case/fields/Implementation_Call_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Call_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Call Completed Date</label>
    <type>Date</type>
</CustomField>