unpackaged/main/default/objects/Case/fields/Implementation_Complete_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Complete_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Complete End Date</label>
    <type>Date</type>
</CustomField>