unpackaged/main/default/objects/Case/fields/Initial_Request_Review_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Request_Review_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Request/Review Start Date</label>
    <type>Date</type>
</CustomField>