unpackaged/main/default/objects/Case/fields/InitialDecisionDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDecisionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InitialDecisionDate</label>
    <type>DateTime</type>
</CustomField>