unpackaged/main/default/objects/Case/fields/Insured_Statement_Received__c.field-meta.xml
<CustomField>
    <fullName>Insured_Statement_Received__c</fullName>
    <description>Captures date insured statement was received</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures date insured statement was received</inlineHelpText>
    <label>Insured Statement Received</label>
    <type>Date</type>
</CustomField>