unpackaged/main/default/objects/Case/fields/Intake_Business_Hours_Exit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Intake_Business_Hours_Exit_Date_Time__c</fullName>
    <formula>IF ((TIMEVALUE( Business_Hours_Exit_DateTime__c ) &lt; TIMEVALUE(&quot;14:00:00.000&quot;) &amp;&amp; TIMEVALUE( Business_Hours_Exit_DateTime__c ) &gt; TIMEVALUE(&quot;06:00:00.000&quot;)),( DATETIMEVALUE(DATE(YEAR(DATEVALUE(  Business_Hours_Exit_DateTime__c )), MONTH(DATEVALUE( Business_Hours_Exit_DateTime__c )), DAY(DATEVALUE( Business_Hours_Exit_DateTime__c )))) + 14/24), Business_Hours_Exit_DateTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Business Hours Exit Date/Time</label>
    <type>DateTime</type>
</CustomField>