unpackaged/main/default/objects/Case/fields/Intake_Business_Hours_Open__c.field-meta.xml
<CustomField>
    <fullName>Intake_Business_Hours_Open__c</fullName>
    <formula>IF( ISNULL(   Intake_Start_Date_Time_Tran__c ),ROUND( 9 * (
( 5 * FLOOR( ( DATEVALUE( Use_SLA_EndDateTime__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5, 
MOD( DATEVALUE(Use_SLA_EndDateTime__c) - DATE( 1996, 1, 8), 7) +
MIN( 1, 24 / 9 * ( MOD( Use_SLA_EndDateTime__c - DATETIMEVALUE( &#39;1900-01-08 14:00:00&#39; ), 1 ) ) )
) 
)
-
( 5 * FLOOR( ( DATEVALUE(   CreatedDate   ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE(  CreatedDate  ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 9 * ( MOD(  Intake_Start_Date_Time__c   - DATETIMEVALUE( &#39;1900-01-08 14:00:00&#39; ), 1) ) )
)
) 
), 
2 ),ROUND( 9 * (
( 5 * FLOOR( ( DATEVALUE( Use_SLA_EndDateTime__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5, 
MOD( DATEVALUE(Use_SLA_EndDateTime__c) - DATE( 1996, 1, 8), 7) +
MIN( 1, 24 / 9 * ( MOD( Use_SLA_EndDateTime__c - DATETIMEVALUE( &#39;1900-01-08 14:00:00&#39; ), 1 ) ) )
) 
)
-
( 5 * FLOOR( ( DATEVALUE( Intake_Start_Date_Time_Tran__c   ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE(  Intake_Start_Date_Time_Tran__c  ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 9 * ( MOD(  Intake_Start_Date_Time_Tran__c   - DATETIMEVALUE( &#39;1900-01-08 14:00:00&#39; ), 1) ) )
)
) 
), 
2 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Business Hours Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>