unpackaged/main/default/objects/Case/fields/Intake_Business_Hours_Open_Save__c.field-meta.xml
<CustomField>
    <fullName>Intake_Business_Hours_Open_Save__c</fullName>
    <label>Intake Business Hours Open Save</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>