unpackaged/main/default/objects/Case/fields/Intake_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Intake_Start_Date_Time__c</fullName>
    <formula>IF ((TIMEVALUE(CreatedDate) &lt; TIMEVALUE(&quot;14:00:00.000&quot;) &amp;&amp; TIMEVALUE(CreatedDate) &gt; TIMEVALUE(&quot;06:00:00.000&quot;)),( DATETIMEVALUE(DATE(YEAR(DATEVALUE( CreatedDate )), MONTH(DATEVALUE(CreatedDate)), DAY(DATEVALUE(CreatedDate)))) + 14/24),CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Start Date/Time</label>
    <type>DateTime</type>
</CustomField>