unpackaged/main/default/objects/Case/fields/Intake_Start_Date_Time_Tran__c.field-meta.xml
<CustomField>
    <fullName>Intake_Start_Date_Time_Tran__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intake Start Date/Time (Tran)</label>
    <type>DateTime</type>
</CustomField>