unpackaged/main/default/objects/Case/fields/IntakeDecisionTAT__c.field-meta.xml
<CustomField>
    <fullName>IntakeDecisionTAT__c</fullName>
    <label>Intake TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>